{
  "sourceLanguage" : "en",
  "strings" : {
    "appName" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : { "stringUnit" : { "state" : "translated", "value" : "Colofa" } },
        "ja" : { "stringUnit" : { "state" : "translated", "value" : "Colofa" } },
        "ko" : { "stringUnit" : { "state" : "translated", "value" : "Colofa" } },
        "zh-Hans" : { "stringUnit" : { "state" : "translated", "value" : "Colofa" } },
        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "Colofa" } }
      }
    },
...
        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "簽出" } }
      }
    },
    "commit" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : { "stringUnit" : { "state" : "translated", "value" : "Commit" } },
        "ja" : { "stringUnit" : { "state" : "translated", "value" : "コミット" } },
        "ko" : { "stringUnit" : { "state" : "translated", "value" : "커밋" } },
        "zh-Hans" : { "stringUnit" : { "state" : "translated", "value" : "提交" } },
        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "提交" } }
      }
    },
...
        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "顯示或隱藏儲存庫資訊" } }
      }
    },
    "repositoryMenu" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : { "stringUnit" : { "state" : "translated", "value" : "Repository" } },
        "ja" : { "stringUnit" : { "state" : "translated", "value" : "リポジトリ" } },
        "ko" : { "stringUnit" : { "state" : "translated", "value" : "저장소" } },
        "zh-Hans" : { "stringUnit" : { "state" : "translated", "value" : "仓库" } },
        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "儲存庫" } }
      }
    },
...
        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "命令" } }
      }
    },
    "detachedHead" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : { "stringUnit" : { "state" : "translated", "value" : "Detached HEAD" } },
        "ja" : { "stringUnit" : { "state" : "translated", "value" : "Detached HEAD" } },
        "ko" : { "stringUnit" : { "state" : "translated", "value" : "분리된 HEAD" } },
        "zh-Hans" : { "stringUnit" : { "state" : "translated", "value" : "分离的 HEAD" } },
        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "分離的 HEAD" } }
      }
    },
...
        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "Git 目錄" } }
      }
    },
    "gitUnavailable" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : { "stringUnit" : { "state" : "translated", "value" : "Git Is Not Available" } },
        "ja" : { "stringUnit" : { "state" : "translated", "value" : "Git を利用できません" } },
        "ko" : { "stringUnit" : { "state" : "translated", "value" : "Git을 사용할 수 없음" } },
        "zh-Hans" : { "stringUnit" : { "state" : "translated", "value" : "Git 不可用" } },
        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "Git 無法使用" } }
      }
    },
...
        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "所選資料夾不在 Git 儲存庫中。" } }
      }
    },
    "ok" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : { "stringUnit" : { "state" : "translated", "value" : "OK" } },
        "ja" : { "stringUnit" : { "state" : "translated", "value" : "OK" } },
        "ko" : { "stringUnit" : { "state" : "translated", "value" : "확인" } },
        "zh-Hans" : { "stringUnit" : { "state" : "translated", "value" : "好" } },
        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "好" } }
      }
    },
...
        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "尚無提交的分支" } }
      }
    },
    "viewDetails" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : { "stringUnit" : { "state" : "translated", "value" : "View Details" } },
        "ja" : { "stringUnit" : { "state" : "translated", "value" : "詳細を表示" } },
        "ko" : { "stringUnit" : { "state" : "translated", "value" : "세부 정보 보기" } },
        "zh-Hans" : { "stringUnit" : { "state" : "translated", "value" : "查看详情" } },
        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "查看詳細資訊" } }
      }
    },
...
